--- a/public/mobile-styles.css
+++ b/public/mobile-styles.css
@@ -174,7 +174,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        backdrop-filter: blur(15px);
+        -webkit-backdrop-filter: blur(15px);
         box-shadow: 0 0 10px black;
         padding: 10px; 
     }
