--- a/public/mobile-styles.css
+++ b/public/mobile-styles.css
@@ -174,7 +174,8 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        -webkit-backdrop-filter: blur(15px);
+        backfrop-filter: blur(15px) contrast(20%);
+        -webkit-backdrop-filter: blur(15px) contrast(20%);
         box-shadow: 0 0 10px black;
         padding: 10px; 
     }
