--- a/public/mobile-styles.css
+++ b/public/mobile-styles.css
@@ -174,8 +174,8 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        backfrop-filter: blur(15px) contrast(2%);
-        -webkit-backdrop-filter: blur(15px) contrast(2%);
+        -webkit-backdrop-filter: blur(15px);
+        backdrop-filter: blur(5px);
         box-shadow: 0 0 10px black;
         padding: 10px; 
     }
