--- a/public/mobile-styles.css
+++ b/public/mobile-styles.css
@@ -61,6 +61,7 @@
 
     #header-titles {
         background-color: transparent;
+        -webkit-backdrop-filter: blur(15px);
         backdrop-filter: blur(15px);
         margin: 0;
         margin-top: 550px;
